--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid px-5">
-      <a class="navbar-brand" href="#">COCKTAILS & DREAMS</a>
+      <a class="navbar-brand" href="#">Cocktails & Dreams</a>
       <button class="navbar-toggler" type="button" style="margin-right: 3%;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">COCKTAILS & DREAMS</h5>
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Cocktails & Dreams</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -135,19 +135,28 @@
         <div class="col-lg-6 mb-4">
           <h4>Reserva tu evento</h4>
           <hr>
-          <p><span class="brand-text">Cocktails & Dreams</span>  es un espacio acogedor y elegante que puedes hacer tuyo. Organizamos eventos desde 10 hasta 100 personas. 
-            Contáctanos para empezar a planificar tu celebración especial.</p>
+          <p>Cocktails & Dreams es un espacio acogedor y elegante que puedes hacer tuyo. Organizamos eventos desde 10 hasta 100 personas. 
+          Contáctanos para empezar a planificar tu celebración especial.</p>
           <a href="contacto.html" class="boton mb-4 d-inline-block">Ponte en contacto</a>
           <div id="carouselEventos" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/images/img2.jpg" alt="Espacio interior" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+                <img src="assets/images/img3.jpg" alt="Espacio interior" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
               </div>
               <div class="carousel-item">
-                <img src="assets/images/img3.jpg" alt="Eventos" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+                <img src="assets/images/img4.jpg" alt="Eventos" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
               </div>
               <div class="carousel-item">
-                <img src="assets/images/img4.jpg" alt="Celebraciones" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+                <img src="assets/images/img5.jpg" alt="Celebraciones" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/images/img6.jpg" alt="Celebraciones" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/images/img8.jpg" alt="Celebraciones" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/images/img9.jpg" alt="Celebraciones" class="img-fluid w-100" style="height: 300px; object-fit: cover;">
               </div>
             </div>
           </div>
@@ -178,9 +187,9 @@
       <div class="footer-content">
         <div class="row mt-5">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <h6 class="fw-bold text-light">
-              <span class="brand-text">Cocktails & Dreams</span>
-            </h6>
+            <h2 class="brand-font text-light">
+              <span class="">Cocktails & Dreams</span>
+            </h2>
             <p class="text-light">
               Desde los clásicos hasta nuestras creaciones exclusivas, cada cóctel es una experiencia única. Acompaña tus bebidas con delicias gastronómicas preparadas por nuestros expertos chefs.
             </p>
