Actualización de estilos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       Celebramos contigo <br>
       <span class="italian-text">A tu manera</span>
       </h2>
-      <button href="productos.html" class="boton2">Descubre nuestros sabores</button>
+      <a href="productos.html" class="boton2">Descubre nuestros sabores</a>
     </div>   
   </header>
 
