--- a/contacto.html
+++ b/contacto.html
@@ -25,13 +25,13 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid px-5">
       <a class="navbar-brand" href="index.html">Cocktails & Dreams</a>
-      <button class="navbar-toggler" type="button" style="margin-right: 3%;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Cocktails & Dreams</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-5 gap-4">
@@ -65,25 +65,14 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.2866780865714!2d-3.6935946239843774!3d40.416889971444676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228c1c5000001%3A0x4ed516635f7bc749!2sPaseo%20de%20la%20Castellana%2C%2095%2C%2028046%20Madrid!5e0!3m2!1ses!2ses!4v1709922547943!5m2!1ses!2ses" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
-            <h4 class="mt-5">NUESTROS HORARIOS</h4>
-            <div class="row">
-              <div class="col-12 col-md-6 mb-4">
-                <ul class="lista-horarios text-light list-unstyled fs-5">
-                  <li>Lunes: 10:00 - 22:00</li>
-                  <li>Martes: 10:00 - 22:00</li>
-                  <li>Miércoles: 10:00 - 22:00</li>
-                  <li>Jueves: 10:00 - 22:00</li>
-                </ul>
-              </div>
-              <div class="col-12 col-md-6 mb-4">
-                <ul class="lista-horarios text-light list-unstyled fs-5">
-                  <li>Viernes: 10:00 - 00:00</li>
-                  <li>Sábado: 12:00 - 01:00</li>
-                  <li>Domingo: 12:00 - 21:00</li>
-                </ul>
-              </div>
-              <p class="fs-6 text-light">*Nuestro horario puede variar en función de la demanda y los eventos programados. Por favor, contacta con nosotros para reservar mesa o mas información.</p>
-            </div>
+            <h4 class="mt-5">NUESTROS HORARIOS</h4> 
+            <ul class="lista-horarios list-unstyled fs-5">
+              <li>Lunes a Jueves: 10:00 - 22:00</li>
+              <li>Viernes: 10:00 - 00:00</li>
+              <li>Sábado: 12:00 - 01:00</li>
+              <li>Domingo: 12:00 - 21:00</li>
+            </ul>
+            <p class="fs-6">*Nuestro horario puede variar en función de la demanda y los eventos programados. Por favor, contacta con nosotros para reservar mesa o mas información.</p>        
           </div>
         </div>
 
