--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid px-5">
       <a class="navbar-brand" href="#">Cocktails & Dreams</a>
-      <button class="navbar-toggler" type="button" style="margin-right: 3%;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Cocktails & Dreams</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-5 gap-4">
@@ -54,8 +54,8 @@
   <header class="container-fluid-main">
     <div class="cocktailscontainer">
       <h2>
-      Celebramos contigo <br>
-      <span class="italian-text">A tu manera</span>
+        Celebramos contigo <br>
+        <span class="italian-text">A tu manera</span>
       </h2>
       <a href="productos.html" class="boton2">Descubre nuestros sabores</a>
     </div>   
