--- a/productos.html
+++ b/productos.html
@@ -25,13 +25,13 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid px-5">
       <a class="navbar-brand" href="index.html">Cocktails & Dreams</a>
-      <button class="navbar-toggler" type="button" style="margin-right: 3%;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Cocktails & Dreams</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-5 gap-4">
@@ -49,7 +49,7 @@
 
   <nav class="navbar2" data-bs-theme="dark">   
     <h4 class="navbar-brand2">¡Explora nuevos sabores!</h4>
-    <div class="d-flex" role="search">
+    <div class="d-block d-lg-flex" role="search">
       <input class="form-control" type="search" placeholder="Buscar..." id="nombrebebida">
       <button class="btn btn-dark mr-2" onclick="buscarbebidas()">Buscar</button>
       <button class="btn btn-dark" onclick="buscarAleatorio()">Aleatorio</button>
@@ -57,8 +57,8 @@
   </nav>
     
     <div class="container-section">
-      <div id="mensaje-busqueda" class="texto-efecto">
-        <p>Intenta buscar por nombre, tipo de alcohol, ingrediente... o haz click en el botón aleatorio para descubrir algo nuevo.</p>
+      <div class="texto-efecto">
+        <p>Intenta buscar en inglés por nombre, tipo de alcohol, ingrediente... o haz click en el botón aleatorio para descubrir algo nuevo.</p>
       </div>
 
       <template id="templatebebida">
@@ -72,7 +72,8 @@
         </div>
       </template>
 
-      <div class="row row-cols-lg-8 row-cols-md-4 g-4" id="listadobebidas"></div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4" id="listadobebidas"></div>
+
     </div>
 
 
@@ -150,59 +151,67 @@
   </footer>
 
   <script>
-   function buscarbebidas(){
-          let nombrebebida = document.getElementById("nombrebebida").value;
-          let url = "https://www.thecocktaildb.com/api/json/v1/1/search.php?s=" + nombrebebida;
+    function ocultarTextoEfecto() {
+      document.querySelector('.texto-efecto').style.display = 'none';
+    }
 
-          fetch(url)
-          .then(respuesta => {
-              if(!respuesta.ok){
-                  alert("Ha ocurrido un error");
-              } else {
-                  document.getElementById("listadobebidas").innerHTML = "";
-                  return respuesta.json();
-              }
-          })
-          .then(datos => {
-              let bebidas = datos.drinks;
-              bebidas.forEach( bebida => {
-                  insertarTarjeta(bebida);
-              });
-          })
-      } 
+    function buscarbebidas(){
+      ocultarTextoEfecto();
+      let nombrebebida = document.getElementById("nombrebebida").value;
+      let url = "https://www.thecocktaildb.com/api/json/v1/1/search.php?s=" + nombrebebida;
 
-      function buscarAleatorio(){
-          let url = "https://www.thecocktaildb.com/api/json/v1/1/random.php?s=";
+      fetch(url)
+      .then(respuesta => {
+          if(!respuesta.ok){
+              alert("Ha ocurrido un error");
+          } else {
+              document.getElementById("listadobebidas").innerHTML = "";
+              return respuesta.json();
+          }
+      })
+      .then(datos => {
+          let bebidas = datos.drinks;
+          bebidas.forEach( bebida => {
+              insertarTarjeta(bebida);
+          });
+      })
+    } 
 
-          fetch(url)
-          .then(respuesta => {
-              if(!respuesta.ok){
-                  alert("Ha ocurrido un error");
-              } else {
-                  document.getElementById("listadobebidas").innerHTML = "";
-                  return respuesta.json();
-              }
-          })
-          .then(datos => {
-              let bebidas = datos.drinks;
-              bebidas.forEach( bebida => {
-                  insertarTarjeta(bebida);
-              });
-          })
-      } 
+    function buscarAleatorio() {
+    ocultarTextoEfecto();
+    document.getElementById("listadobebidas").innerHTML = "";
 
-      function insertarTarjeta(bebida){
-          let template = document.getElementById("templatebebida").content;
+    const peticiones = [
+      fetch("https://www.thecocktaildb.com/api/json/v1/1/random.php"),
+      fetch("https://www.thecocktaildb.com/api/json/v1/1/random.php"),
+      fetch("https://www.thecocktaildb.com/api/json/v1/1/random.php"),
+      fetch("https://www.thecocktaildb.com/api/json/v1/1/random.php"),
+    ];
 
-          let listadobebidas = document.getElementById("listadobebidas");
+    Promise.all(peticiones)
+      .then(respuestas => Promise.all(respuestas.map(r => r.json())))
+      .then(datosArray => {
+        datosArray.forEach(datos => {
+          let bebidas = datos.drinks;
+          bebidas.forEach(bebida => insertarTarjeta(bebida));
+        });
+      })
+      .catch(() => alert("Ha ocurrido un error"));
+  }
 
-          let bebidaCard = template.cloneNode(true);
-          bebidaCard.querySelector("img").src = bebida.strDrinkThumb;
-          bebidaCard.querySelector("img").alt = bebida.strDrink;
-          bebidaCard.querySelector(".card-title").innerHTML = bebida.strDrink;
 
-          listadobebidas.appendChild(bebidaCard);
-      }
+    function insertarTarjeta(bebida){
+      let template = document.getElementById("templatebebida").content;
+
+      let listadobebidas = document.getElementById("listadobebidas");
+
+      let bebidaCard = template.cloneNode(true);
+      bebidaCard.querySelector("img").src = bebida.strDrinkThumb;
+      bebidaCard.querySelector("img").alt = bebida.strDrink;
+      bebidaCard.querySelector(".card-title").innerHTML = bebida.strDrink;
+
+      listadobebidas.appendChild(bebidaCard);
+    }
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
